--- a/MyDemo/Demo/Demo/UI/动画/爆炸效果/BoomViewController.xib
+++ b/MyDemo/Demo/Demo/UI/动画/爆炸效果/BoomViewController.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,7 +36,7 @@
                         <action selector="clickResetButton" destination="-1" eventType="touchUpInside" id="KcV-KK-zQo"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="001.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="whY-IA-Sgx">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="testExplodPic.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="whY-IA-Sgx">
                     <rect key="frame" x="122" y="40" width="90" height="90"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="90" id="vhc-G4-Nxg"/>
@@ -54,9 +55,83 @@
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E83-Ts-g7x">
                     <rect key="frame" x="16" y="40" width="90" height="90"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yxl-SG-7hD">
+                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.17230902779999999" blue="0.091498480899999998" alpha="1" colorSpace="calibratedRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXR-Db-pfC">
+                            <rect key="frame" x="30" y="0.0" width="30" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yJd-Go-Qjt">
+                            <rect key="frame" x="60" y="0.0" width="30" height="30"/>
+                            <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bwG-bv-E8S">
+                            <rect key="frame" x="0.0" y="30" width="30" height="30"/>
+                            <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jb3-bq-84S">
+                            <rect key="frame" x="30" y="30" width="30" height="30"/>
+                            <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ysh-Gf-7us">
+                            <rect key="frame" x="60" y="30" width="30" height="30"/>
+                            <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gyq-PG-RbJ">
+                            <rect key="frame" x="0.0" y="60" width="30" height="30"/>
+                            <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TLm-Od-zdT">
+                            <rect key="frame" x="30" y="60" width="30" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VhP-xd-2t9">
+                            <rect key="frame" x="60" y="60" width="30" height="30"/>
+                            <color key="backgroundColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="Gyq-PG-RbJ" firstAttribute="width" secondItem="bwG-bv-E8S" secondAttribute="width" id="0GX-Cy-oWf"/>
+                        <constraint firstItem="Jb3-bq-84S" firstAttribute="top" secondItem="vXR-Db-pfC" secondAttribute="bottom" id="1I4-yS-3nd"/>
+                        <constraint firstItem="VhP-xd-2t9" firstAttribute="leading" secondItem="TLm-Od-zdT" secondAttribute="trailing" id="1wd-IR-sv0"/>
+                        <constraint firstItem="VhP-xd-2t9" firstAttribute="top" secondItem="ysh-Gf-7us" secondAttribute="bottom" id="2VV-qz-u2l"/>
+                        <constraint firstItem="yxl-SG-7hD" firstAttribute="leading" secondItem="E83-Ts-g7x" secondAttribute="leading" id="6CW-Dh-2BX"/>
+                        <constraint firstItem="bwG-bv-E8S" firstAttribute="height" secondItem="yxl-SG-7hD" secondAttribute="height" id="7jH-KP-t6X"/>
+                        <constraint firstItem="ysh-Gf-7us" firstAttribute="top" secondItem="yJd-Go-Qjt" secondAttribute="bottom" id="7yi-ij-zwm"/>
+                        <constraint firstItem="yJd-Go-Qjt" firstAttribute="top" secondItem="E83-Ts-g7x" secondAttribute="top" id="9xV-PW-zum"/>
+                        <constraint firstItem="ysh-Gf-7us" firstAttribute="height" secondItem="Jb3-bq-84S" secondAttribute="height" id="EUb-GR-PlA"/>
+                        <constraint firstItem="vXR-Db-pfC" firstAttribute="leading" secondItem="yxl-SG-7hD" secondAttribute="trailing" id="EZz-KT-FXG"/>
+                        <constraint firstItem="TLm-Od-zdT" firstAttribute="top" secondItem="Jb3-bq-84S" secondAttribute="bottom" id="Edf-2X-bYt"/>
+                        <constraint firstItem="bwG-bv-E8S" firstAttribute="width" secondItem="yxl-SG-7hD" secondAttribute="width" id="GYj-5X-nNL"/>
+                        <constraint firstItem="TLm-Od-zdT" firstAttribute="height" secondItem="Gyq-PG-RbJ" secondAttribute="height" id="Gcw-LK-VBj"/>
+                        <constraint firstItem="yJd-Go-Qjt" firstAttribute="height" secondItem="vXR-Db-pfC" secondAttribute="height" id="H1D-W1-Dxq"/>
+                        <constraint firstItem="vXR-Db-pfC" firstAttribute="width" secondItem="yxl-SG-7hD" secondAttribute="width" id="HFt-3E-d5a"/>
+                        <constraint firstItem="ysh-Gf-7us" firstAttribute="leading" secondItem="Jb3-bq-84S" secondAttribute="trailing" id="ILb-rM-T5M"/>
+                        <constraint firstItem="VhP-xd-2t9" firstAttribute="height" secondItem="TLm-Od-zdT" secondAttribute="height" id="LRZ-IS-HYk"/>
+                        <constraint firstItem="Gyq-PG-RbJ" firstAttribute="top" secondItem="bwG-bv-E8S" secondAttribute="bottom" id="LqB-WR-0ob"/>
+                        <constraint firstItem="TLm-Od-zdT" firstAttribute="width" secondItem="Gyq-PG-RbJ" secondAttribute="width" id="MWC-wR-JX7"/>
+                        <constraint firstItem="TLm-Od-zdT" firstAttribute="leading" secondItem="Gyq-PG-RbJ" secondAttribute="trailing" id="PYi-GE-7TW"/>
+                        <constraint firstItem="yxl-SG-7hD" firstAttribute="width" secondItem="E83-Ts-g7x" secondAttribute="width" multiplier="0.333333" id="TeT-rF-WoT"/>
+                        <constraint firstAttribute="trailing" secondItem="yJd-Go-Qjt" secondAttribute="trailing" id="VbV-ok-W3b"/>
+                        <constraint firstItem="bwG-bv-E8S" firstAttribute="leading" secondItem="E83-Ts-g7x" secondAttribute="leading" id="YcI-Nm-Wx7"/>
+                        <constraint firstItem="ysh-Gf-7us" firstAttribute="width" secondItem="Jb3-bq-84S" secondAttribute="width" id="Z4C-QH-UOa"/>
+                        <constraint firstItem="Gyq-PG-RbJ" firstAttribute="leading" secondItem="E83-Ts-g7x" secondAttribute="leading" id="aEv-IT-Ck6"/>
+                        <constraint firstItem="bwG-bv-E8S" firstAttribute="top" secondItem="yxl-SG-7hD" secondAttribute="bottom" id="aRs-Yc-hLe"/>
+                        <constraint firstItem="yxl-SG-7hD" firstAttribute="height" secondItem="E83-Ts-g7x" secondAttribute="height" multiplier="0.333333" id="apy-cR-mIR"/>
                         <constraint firstAttribute="width" constant="90" id="gLY-Zo-PjM"/>
+                        <constraint firstItem="yxl-SG-7hD" firstAttribute="top" secondItem="E83-Ts-g7x" secondAttribute="top" id="iLz-wJ-XKc"/>
+                        <constraint firstItem="Gyq-PG-RbJ" firstAttribute="height" secondItem="bwG-bv-E8S" secondAttribute="height" id="mLE-dV-GPh"/>
+                        <constraint firstItem="Jb3-bq-84S" firstAttribute="leading" secondItem="bwG-bv-E8S" secondAttribute="trailing" id="pvY-Tv-ipj"/>
+                        <constraint firstItem="Jb3-bq-84S" firstAttribute="width" secondItem="bwG-bv-E8S" secondAttribute="width" id="qSL-IZ-IrY"/>
+                        <constraint firstItem="Jb3-bq-84S" firstAttribute="height" secondItem="bwG-bv-E8S" secondAttribute="height" id="rUv-mz-kFW"/>
+                        <constraint firstItem="vXR-Db-pfC" firstAttribute="height" secondItem="yxl-SG-7hD" secondAttribute="height" id="sXL-Sd-3NJ"/>
+                        <constraint firstItem="VhP-xd-2t9" firstAttribute="width" secondItem="TLm-Od-zdT" secondAttribute="width" id="sii-2r-UDN"/>
+                        <constraint firstItem="vXR-Db-pfC" firstAttribute="top" secondItem="E83-Ts-g7x" secondAttribute="top" id="ukT-pY-euE"/>
+                        <constraint firstItem="yJd-Go-Qjt" firstAttribute="width" secondItem="vXR-Db-pfC" secondAttribute="width" id="vmT-cs-x5f"/>
                         <constraint firstAttribute="height" constant="90" id="x8Z-Nh-oS5"/>
                     </constraints>
                 </view>
@@ -79,6 +154,16 @@
                         <action selector="clickRemoveButton" destination="-1" eventType="touchUpInside" id="y0u-b6-4hg"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rUc-ua-Rrf">
+                    <rect key="frame" x="157.5" y="420.5" width="60" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="60" id="iHK-rV-Wd7"/>
+                    </constraints>
+                    <state key="normal" title="Open"/>
+                    <connections>
+                        <action selector="clickOpenButton" destination="-1" eventType="touchUpInside" id="Wei-K7-hD4"/>
+                    </connections>
+                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e3L-h0-6Vi">
                     <rect key="frame" x="157.5" y="466.5" width="60" height="30"/>
                     <constraints>
@@ -88,16 +173,6 @@
                     <state key="normal" title="Close"/>
                     <connections>
                         <action selector="clickCloseButton" destination="-1" eventType="touchUpInside" id="xY2-NK-6eM"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rUc-ua-Rrf">
-                    <rect key="frame" x="157.5" y="420.5" width="60" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="60" id="iHK-rV-Wd7"/>
-                    </constraints>
-                    <state key="normal" title="Open"/>
-                    <connections>
-                        <action selector="clickOpenButton" destination="-1" eventType="touchUpInside" id="Wei-K7-hD4"/>
                     </connections>
                 </button>
             </subviews>
@@ -125,6 +200,6 @@
         </view>
     </objects>
     <resources>
-        <image name="001.jpg" width="330" height="220"/>
+        <image name="testExplodPic.jpeg" width="960" height="800"/>
     </resources>
 </document>
