--- a/MyDemo/Demo/Demo/UI/动画/橡皮筋效果/ElasticViewController.xib
+++ b/MyDemo/Demo/Demo/UI/动画/橡皮筋效果/ElasticViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UIElasticViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ElasticViewController">
             <connections>
                 <outlet property="testButton" destination="14I-aE-Ye7" id="cuZ-JQ-Xd0"/>
                 <outlet property="testImageView" destination="yRa-vM-DMp" id="i2g-Es-CbF"/>
